--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@faker-js/faker": "^9.1.0",
+    "@prisma/client": "5.21.1",
+    "argon2": "^0.41.1",
+    "elysia": "latest",
+    "prisma": "^5.21.1"
   },
   "devDependencies": {
     "bun-types": "latest"
+  },
+  "prisma": {
+    "seed": "bun run prisma/seeder.ts"
   },
   "module": "src/index.js"
 }
